<resources>
    <string name="app_name">QEditor</string>
    <string name="app_name_test">QEditor-Test</string>
    <string name="hello_world">Hello world!</string>
    <string name="decode">Decode</string>
    <string name="build">Build</string>
    <string name="signer">Signer</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="run">Run</string>
    <string name="console">Console</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="close_other">Close Other</string>
    <string name="close_all">Close All</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="move_to_left">Move to left</string>
    <string name="move_to_right">Move to right</string>
    <string name="build_and_run">Build and run</string>
    <string name="build_so">Build to \'so\'</string>
    <string name="new_file">New File</string>
    <string name="new_dir">New Folder</string>
    <string name="new_project">New Project</string>
    <string name="refresh">Refresh</string>
    <string name="info">Info</string>
    <string name="by_wangchen11">By WangChen11\nOpen source project:https://github.com/wangchen11/XQCEditor.git\nw1012371864@gmail.com\n1012371864@qq.com</string>
    <string name="editor_set">Editor Setting:</string>
    <string name="background_color">Background Color</string>
    <string name="font_color">Font Color</string>
    <string name="font_scale">Font Scale</string>
    <string name="bei"></string>
    <string name="high_light_set">Highlight Setting:</string>
    <string name="key_word_color">Keyword Color</string>
    <string name="pre_key_word_color">Pre-Keyword Color</string>
    <string name="const_color">Constant Color</string>
    <string name="identifier_color">Identifier Color</string>
    <string name="comments_color">Comments Color</string>
    <string name="other_set">Other Setting:</string>
    <string name="quick_input">Quickly Input</string>
    <string name="title_background_color">Title Background Color</string>
    <string name="select_title_color">Selected Background Color</string>
    <string name="restore_defaults">Restore Defaults</string>
    <string name="ok">OK</string>
    <string name="file_browser">File Browser</string>
    <string name="no_title">No Title</string>
    <string name="find">Find</string>
    <string name="replace">Replace</string>
    <string name="find_replace">Replace/Find</string>
    <string name="replace_all">Replace All</string>
    <string name="failed_find">Failed Find!</string>
    <string name="failed_replace">Failed Replace!</string>
    <string name="failed_find_replace">Failed Replace/Find</string>
    <string name="failed_replace_all">Failed Replace All!</string>
    <string name="compiling">Compiling</string>
    <string name="compilation_fails">Compilation Fails!</string>
    <string name="successfully_compiled">Successfully Compiled!</string>
    <string name="no_elf_file">No ELF File!</string>
    <string name="rename_has_succeed">Rename has Succeed!</string>
    <string name="rename_has_failed">Rename has Failed!</string>
    <string name="successfully">Successfully:</string>
    <string name="failed">Failed:</string>
    <string name="jni_runner">JNIRunner</string>
    <string name="create_workspace_failed">failed to create workspace!</string>
    <string name="press_back_more_to_exit">press more back again to quit!</string>
    <string name="file_not_save">file not saved!</string>
    <string name="file">file</string>
    <string name="unsaved">not saved!</string>
    <string name="cancel">cancel</string>
    <string name="save_and_quit">save and quit</string>
    <string name="force_close">force close</string>
    <string name="c_file_not_found">not find \'.c\' or \'.cpp\' file in project.</string>
    <string name="save_fail">save failed! try to force close.</string>
    <string name="lunch_fail">lunch fail</string>
    <string name="craete_file_fail">create file fail!</string>
    <string name="create_dir_fail">crate dir fail!</string>
    <string name="fail">fail:</string>
    <string name="save_failed">Save failed!</string>
    <string name="file_name">file name:</string>
    <string name="file_path">file path:</string>
    <string name="project_name">project name:</string>
    <string name="src_path">src path:</string>
    <string name="bin_path">bin path:</string>
    <string name="project_path">project path:</string>
    <string name="not_project">this file not in project.</string>
    <string name="program_end">program end.</string>
    <string name="loading">loading...</string>
    <string name="dirs">dirs:</string>
    <string name="files">files:</string>
    <string name="unkonw">unkonws:</string>
    <string name="size">size:</string>
    <string name="i_know">i konw</string>
    <string name="confirm_delete">confirm delete</string>
    <string name="delete">delete</string>
    <string name="success">success:</string>
    <string name="file_unreadable">file_unreadable,try to get root  permission.</string>
    <string name="exist">exist:</string>
    <string name="share">share</string>
    <string name="pack_and_run">Package and run</string>
    <string name="package_and_run">Package and run</string>
    <string name="failed_to_free_resource">failed to free resource,need SD card!</string>
    <string name="compile_has_error">compile has error</string>
    <string name="run_shell">Run shell</string>
    <string name="run_shell_as_root">Run shell(as root)</string>
    <string name="zip">zip</string>
    <string name="package_fail">package fail!</string>
    <string name="deal_res_fail">deal res fail!</string>
    <string name="signed_apk_done">signed apk done!</string>
    <string name="signed_apk_fail">signed apk fail!</string>
    <string name="deal_res">deal res...</string>
    <string name="deal_res_done">deal res done!</string>
    <string name="add_files">add files...</string>
    <string name="tip">tip:</string>
    <string name="file_not_exist">file not exist</string>
    <string name="help">Help</string>
    <string name="line_scale">Line scale</string>
    <string name="show_ad">get points</string>
    <string name="close_ad">close ad</string>
    <string name="debug_run">Debug run</string>
    <string name="php_config">Php config</string>
    <string name="remote_browsing">remote browsing</string>
    <string name="local_browsing">local browsing</string>
    <string name="open_with_browser">open with browser</string>
    <string name="use_nice_font">"Use nice font"</string>
    <string name="use_high_light">Use high light</string>
    <string name="complie_to_s">Complie to \'asm\'</string>
    <string name="charset">charset:</string>
    <string name="clean_objs">clean objs</string>
    <string name="this_file_can_not_run">this file is not runnable! </string>
    <string name="input_param">please input param</string>
    <string name="run_lua">run lua</string>
    <string name="code_format">Code format</string>
    <string name="ip_addr">ip</string>
    <string name="port">port</string>
    <string name="connect">connect</string>
    <string name="send">send</string>
    <string name="disconnect">disconnect</string>
    <string name="show_as_hex">show as hex</string>
    <string name="show_sender">show sender</string>
    <string name="clear">Clear</string>
    <string name="net_assist">Net asssist</string>
    <string name="unsupport_udp">unsupport UDP</string>
    <string name="server_isnot_started">server is not started!</string>
    <string name="not_connected">not connected!</string>
    <string-array name="procotol_names">
        <item >TCP client</item>
        <item >TCP server</item>
        <item >UDP</item>
    </string-array>
    <string name="close_button_color">Close button color</string>
    <string name="use_quickly_close">Use quickly close</string>
    <string name="use_new_ver_console">Use new version console</string>
    <string translatable="false" name="make_j8">make -j8</string>
    <string translatable="false" name="make_b_j8">make -B -j8</string>
    <string translatable="false" name="make_clean">make clean</string>
    <string translatable="false" name="make_option">make option</string>
    <string name="_goal">Goal：</string>
    <string name="_score">Point：</string>
    <string name="_help">Help</string>
    <string name="_newGame">New Game</string>
    <string name="_undo">Undo</string>
    <string name="_level">Level：</string>
    <string name="_high">High：</string>
    <string name="_gameover">Game Over</string>
    <string name="_noenoughscore">Failed to reach the specified points.\n</string>
    <string name="_nonext">There\'s nothing to do.\n</string>
    <string name="_wait">Wait</string>
    <string name="_back">Back</string>
    <string name="_updatemsg">Update message</string>
    <string name="_updateinfo"></string>
    <string name="warn">Warning</string>
    <string name="error">Error</string>
    <string name="installing">Installing...</string>
    <string name="uninstalling">Uninstalling...</string>
    <string name="free_example">Release routine</string>
    <string name="install_gcc">Install GCC</string>
    <string name="free_gcc_res">Releasing GCC resources</string>
    <string name="free_gpp_res">Releasing G++ resources</string>
    <string name="install_done">Installation is complete</string>
    <string name="install_failed">Installation failure</string>
    <string name="unziping">Extracting...</string>
    <string name="title_at_head">The title bar is above</string>
    <string name="ctrl_at_head">The control panel is on the top</string>
    <string name="animation">Animation</string>
    <string name="check_for_update">Check for update</string>
    <string name="cur_version">Current version</string>
    <string name="default_version">v1.0.0</string>
    <string name="is_the_latest_version">Is the latest version</string>
    <string name="is_the_latest_version_thanku">The current version is the latest version. Thank you!</string>
    <string name="find_new_version">Find new version</string>
    <string name="update_now">Update now</string>
    <string name="checking">Checking.</string>
    <string name="can_not_get_version_info">Can not get version info.</string>
    <string name="version_update">Update</string>
    <string name="auto_update">Auto update</string>
    <string name="restore_default">Restore default</string>
    <string name="browser">Browser</string>
    <string name="db_path">Data base path:</string>
    <string name="www_path">File path:</string>
    <string name="mysql_port">MYSQL port:</string>
    <string name="http_port">HTTP port:</string>
    <string name="state">State</string>
    <string name="stop_service">Stop service</string>
    <string name="start_service">Start service</string>
    <string name="php_service_not_found">PHP server not found.Please download from:\nhttps://pan.baidu.com/s/1kV4ThjT</string>
    <string name="console_application">Console Application</string>
    <string name="gui_application">GUI Application</string>
    <string name="sdl_application">SDL Application</string>
    <string name="my_id">My ID</string>
    <string name="my_points">My points</string>
    <string name="points">Points:</string>
    <string name="colse_ad_by_points">Colse AD by points.</string>
    <string name="ol_pay">Online pay:</string>
    <string name="app_price">Pay 8.8 yuan to close the advertisement. After brushing the machine, it can be retrieved by retrieving the secret key. The retrieving function only supports advertisements that are closed by means of payment. If you have any questions, please contact us.QQ:978915687 (Summer).</string>
    <string name="pay">Pay</string>
    <string name="get_back">Get back</string>
    <string name="device_info">Device information:</string>
</resources>