<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Spinner
        android:id="@+id/spinner_proc_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_proc_type"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

        <AutoCompleteTextView
            android:layout_weight="1"
            android:id="@+id/edit_text_addr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="6"
            android:hint="@string/ip_addr"
            android:singleLine="true" >

            <requestFocus />
        </AutoCompleteTextView>

        <AutoCompleteTextView
            android:layout_weight="1"
            android:id="@+id/edit_text_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="4"
            android:hint="@string/port"
            android:inputType="numberSigned"
            android:maxLength="5"
            android:singleLine="true" />

        <Button
            android:id="@+id/button_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll_view_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/show_control_layout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/text_view_show_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:typeface="monospace" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/send_msg_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

        <EditText
            android:id="@+id/edit_text_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />

        <Button
            android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/show_control_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/send_msg_layout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

        <CheckBox
            android:layout_weight="1"
            android:id="@+id/check_box_show_as_hex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_as_hex" />

        <CheckBox
            android:layout_weight="1"
            android:id="@+id/check_box_show_sender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_sender" />

        <Button
            android:layout_weight="1"
            android:id="@+id/button_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear" />

    </LinearLayout>

</RelativeLayout>