<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/edit_project_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:singleLine="true"
        android:text="project" >

        <requestFocus />
    </EditText>

    <RadioGroup
        android:id="@+id/radio_group_new_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radio_console"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/console_application" />

        <RadioButton
            android:id="@+id/radio_window"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gui_application" />
        
        <RadioButton
            android:id="@+id/radio_sdl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sdl_application" />
    </RadioGroup>

</LinearLayout>
